[package]
name = "actix-web-lets-encrypt"
version = "0.2.1"
authors = ["Clifford T. Matthews <ctm@devctm.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web ={ version = "3", features = ["openssl"] }
actix-files = "0.5"
actix-http = "2"
actix-service = "1"
acme-client = { version = "0.5", default-features = false }
openssl = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"